--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.12.2
 certifi==2022.12.7
 charset-normalizer==3.1.0
 Django==4.1.4
+django-filter==23.3
 djangorestframework==3.14.0
 idna==3.4
 python-dotenv==1.0.0
